--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,41 @@
 {
-    "name": "diepxuan/laravel-catalog",
-    "description": "Catalog package for DXPanel",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Tran Ngoc Duc",
-            "email": "ductn@diepxuan.com"
-        }
-    ],
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Diepxuan\\Catalog\\Providers\\CatalogServiceProvider"
-            ],
-            "aliases": {}
-        }
+  "name": "diepxuan/laravel-catalog",
+  "description": "Catalog package for DXPanel",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Tran Ngoc Duc",
+      "email": "ductn@diepxuan.com"
+    }
+  ],
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Diepxuan\\Catalog\\Providers\\CatalogServiceProvider"
+      ],
+      "aliases": {}
+    }
+  },
+  "require": {
+    "diepxuan/laravel-core": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "Diepxuan\\Catalog\\": "src/",
+      "Diepxuan\\Catalog\\Database\\Factories\\": "database/factories/",
+      "Diepxuan\\Catalog\\Database\\Seeders\\": "database/seeders/"
     },
-    "autoload": {
-        "psr-4": {
-            "Diepxuan\\Catalog\\": "src/",
-            "Diepxuan\\Catalog\\Database\\Factories\\": "database/factories/",
-            "Diepxuan\\Catalog\\Database\\Seeders\\": "database/seeders/"
-        },
-        "files": [
-            "helpers.php"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Diepxuan\\Catalog\\Tests\\": "tests/"
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "minimum-stability": "dev"
+    "files": [
+      "helpers.php"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Diepxuan\\Catalog\\Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "minimum-stability": "dev"
 }
