require diepxuan/laravel-magento

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     }
   },
   "require": {
-    "diepxuan/laravel-core": "*"
+    "diepxuan/laravel-core": "*",
+    "diepxuan/laravel-magento": "*"
   },
   "autoload": {
     "psr-4": {
