sync products to magento

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
   "require": {
     "diepxuan/laravel-core": "*",
-    "diepxuan/laravel-magento": "*"
+    "diepxuan/laravel-magento": "*",
+    "diepxuan/php-charset": "*"
   },
   "autoload": {
     "psr-4": {
