--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   },
   "require": {
     "diepxuan/laravel-core": "*",
+    "diepxuan/laravel-log": "*",
     "diepxuan/laravel-magento": "*",
     "diepxuan/laravel-simba": "*",
     "diepxuan/php-charset": "*"
